fix(angular/header-environment): fix text color in dark mode
Fixes #2202

--- a/src/angular/header-lean/header.scss
+++ b/src/angular/header-lean/header.scss
@@ -49,7 +49,7 @@
   line-height: calc(#{sbb.pxToRem(12)} * var(--sbb-scaling-factor));
   letter-spacing: 0;
   font-size: calc(#{sbb.pxToRem(10)} * var(--sbb-scaling-factor));
-  color: var(--sbb-color-white);
+  color: var(--sbb-color-background);
   transform: rotate(-45deg);
 }
 
